Fixed a vertical overflow

--- a/src/plugins/widgets/bookmarks/Bookmarks.sass
+++ b/src/plugins/widgets/bookmarks/Bookmarks.sass
@@ -9,9 +9,9 @@
   .folder
     margin-top: 0.6em
     display: flex
-    overflow-x: hidden
+    overflow: hidden
 
   .bookmark
     margin-top: 0.2em
     display: flex
-    overflow-x: hidden
+    overflow: hidden
